# FE

./: .env.development  .env.production  .firebaserc  .gitignore  README.md  index.html  package-lock.json  package.json  versel.json  vite.config.ts  vitest.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature---task-template-.md  maintenance-template.md
.github/workflows/: build.yml  ci.yml
assets/: index-4S-dOAMQ.js  index-B1pMyKKY.js  index-BHe_LHmy.js  index-BXlosSeC.css  index-BYp-nmV9.js  index-BiLDm-P0.css  index-BkO4QGla.css  index-BkYzNEXs.js  index-BqxsggyE.js  index-CEN-DXCQ.js  index-CM3NN3ZF.js  index-CNnpNPDP.css  index-CSKOyT6g.js  index-Co48aXwd.js  index-D7V6298H.css  index-DKyaJTaA.js  index-DWxm3XAL.css  index-DWzGjaWV.js  index-DgkTdIWf.js  index-DmsR4-kU.js  index-ESBcGA5A.css  index-LuvA99qz.css  index-TnWp0Ntw.js  index-TxFMpoCX.css  index-je3J4htC.css  index-yfXZFGrv.js  jszip.min-B2tbv3-2.js  jszip.min-B5WB8LEa.js  jszip.min-BIHr4GJL.js  jszip.min-BK8FYdOd.js  jszip.min-BV_wRqcI.js  jszip.min-BabwNf_3.js  jszip.min-BexeygoC.js  jszip.min-BsMsrIw-.js  jszip.min-C_hdBBwy.js  jszip.min-Ci9EP4mB.js  jszip.min-DP4TnuvZ.js  jszip.min-DdoybkMn.js  jszip.min-DppSZTSm.js  jszip.min-Duwv2HKz.js  (+1 more)
docs/: RELEASE.md
src/: App.tsx  index.css  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: AuthService.ts  HistoryService.ts  JobService.ts  (+5 more)
(+54 files in other folders)
