[package]
name = "braillemate"
version = "0.0.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "braillemate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-oauth = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 자동 업데이트는 데스크톱에서만 지원 (모바일 빌드에서는 제외)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
